fix z-index

--- a/src/lxneng/static/css/style.css
+++ b/src/lxneng/static/css/style.css
@@ -53,7 +53,7 @@ header {
     font-size:14px; 
     position: fixed;
     background-color:rgba(0,0,0,.8);
-    z-index:2;    
+    z-index:999;    
 }
 
 ul#nav {
